garage door open and close
Signed-off-by: Mark Herwege <mark.herwege@telenet.be>